--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,10 @@ dependencies = [
     "matplotlib >= 3.10.8"
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest"
+]
+
 [project.scripts]
 datadenoise = "DataDenoise_MAIN:main"
