--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -27,6 +27,31 @@ jobs:
           # Install the project along with the 'test' optional dependencies
           pip install -e '.[test]'
 
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-application-build
+          # Point to the directory containing your application code and installed libraries if necessary
+          path: |
+            .
+            !venv/
+  test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.10', '3.11', '3.12']
+
+    runs-on: ${{ matrix.os }}
+
+    needs: build
+    
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: python-application-build
+          path: .
+    
       - name: Run tests with pytest
         run: |
           pytest
