--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -27,10 +27,10 @@ jobs:
           # Install the project along with the 'test' optional dependencies
           pip install -e '.[test]'
 
-      - name: Archive production artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: python-application-build
+          name: my-artifact-${{ matrix.os }}
           # Point to the directory containing your application code and installed libraries if necessary
           path: |
             .
@@ -49,7 +49,7 @@ jobs:
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: python-application-build
+          name: my-artifact-${{ matrix.os }}
           path: .
     
       - name: Run tests with pytest
