--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: my-artifact-${{ matrix.os }}
+          name: my-artifact-${{ matrix.os }}-python-${{ matrix.python-version }}
           # Point to the directory containing your application code and installed libraries if necessary
           path: |
             .
@@ -49,7 +49,7 @@ jobs:
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: my-artifact-${{ matrix.os }}
+          name: my-artifact-${{ matrix.os }}-python-${{ matrix.python-version }}
           path: .
     
       - name: Run tests with pytest
