Added pytest install to test job

--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -24,8 +24,7 @@ jobs:
       - name: Install dependencies and project in editable mode
         run: |
           python -m pip install --upgrade pip
-          # Install the project along with the 'test' optional dependencies
-          pip install -e '.[test]'
+          pip install -e .
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -51,7 +50,9 @@ jobs:
         with:
           name: my-artifact-${{ matrix.os }}-python-${{ matrix.python-version }}
           path: .
-    
+      - name: Install pytest
+        run: |
+          pip install pytest
       - name: Run tests with pytest
         run: |
           pytest
