--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -3,7 +3,7 @@ name: Python-Tests
 on: [push, pull_request]
 
 jobs:
-  build:
+  build-and-test:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -24,32 +24,8 @@ jobs:
       - name: Install dependencies and project in editable mode
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
-
-      - run: mkdir artifact_dir
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-artifact-${{ matrix.os }}-python-${{ matrix.python-version }}
-          path: artifact_dir
-  test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.10', '3.11', '3.12']
-
-    runs-on: ${{ matrix.os }}
-
-    needs: build
-    
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: my-artifact-${{ matrix.os }}-python-${{ matrix.python-version }}
-      - name: Install pytest
-        run: |
-          pip install pytest
+          pip install -e '.[test]'
+        
       - name: Run tests with pytest
         run: |
           pytest
