--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -1,10 +1,10 @@
-name: Python-Tests
+name: Python-Build-Artifacts
 
 on: [push, pull_request]
 
 jobs:
   # Job 1
-  build-and-test:
+  build:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -31,6 +31,14 @@ jobs:
           pip install -e '.[test]'
       
       # Step 4
-      - name: Run tests with pytest
+      - name: Build the Python application (e.g., package)
         run: |
-          pytest
+          python -m build --sdist --wheel .
+
+      # Step 5
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{matrix.os}}-py-${{matrix.python-version}}
+          path: dist/
+          # retention-days: 4
