--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -28,12 +28,13 @@ jobs:
       - name: Install dependencies and project in editable mode
         run: |
           python -m pip install --upgrade pip
+          pip install wheel
           pip install -e '.[test]'
       
       # Step 4
-      - name: Build the Python application (e.g., package)
+      - name: Build the Python application
         run: |
-          python -m build --sdist --wheel .
+          python setup.py sdist bdist_wheel
 
       # Step 5
       - name: Upload build artifact
