--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Install dependencies and project in editable mode
         run: |
           python -m pip install --upgrade pip
+          pip install setuptools
           pip install wheel
           pip install -e '.[test]'
       
