--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -63,6 +63,12 @@ jobs:
               with:
                 name: build-${{matrix.os}}-py-${{matrix.python-version}}
                 path: dist
+            
+            # Step 3 Install Test Dependencies
+            - name: Install test dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install pytest # Install pytest for running tests
 
             # Step 3 Run python tests
             - name: Run Python tests
