--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -30,12 +30,14 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install setuptools
                 pip install wheel
+                pip install build
                 pip install -e '.[test]'
             
             # Step 4
             - name: Build the Python application
               run: |
-                python setup.py sdist bdist_wheel
+                python -m build
+            #setup.py sdist bdist_wheel
 
             # Step 5
             - name: Upload build artifact
@@ -64,11 +66,10 @@ jobs:
                 name: build-${{matrix.os}}-py-${{matrix.python-version}}
                 path: dist
             
-            # Step 3 Install Test Dependencies
-            - name: Install test dependencies
+            # Step 3 Install Project Dependencies
+            - name: Install Project and dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install pytest # Install pytest for running tests
 
             # Step 3 Run python tests
             - name: Run Python tests
