--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -69,8 +69,9 @@ jobs:
             - name: Install Project and dependencies
               run: |
                 python -m pip install --upgrade pip
+                pip install pytest
 
-            # Step 3 Run python tests
+            # Step 4 Run python tests
             - name: Run Python tests
               run: |
                 pytest
