--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -69,7 +69,7 @@ jobs:
             - name: Install Project and dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install pytest
+                pip install '.[test]'
 
             # Step 4 Run python tests
             - name: Run Python tests
