--- a/.github/workflows/py-build-test.yml
+++ b/.github/workflows/py-build-test.yml
@@ -1,4 +1,4 @@
-name: Python-Build-Artifacts
+name: Python-Build-Test
 
 on: [push, pull_request]
 
@@ -36,7 +36,6 @@ jobs:
             - name: Build the Python application
               run: |
                 python -m build
-            #setup.py sdist bdist_wheel
 
             # Step 5
             - name: Upload build artifact
@@ -58,20 +57,20 @@ jobs:
             - name: Check out repository code
               uses: actions/checkout@v4
             
-            # Step 2 Download artifacts
+            # Step 2
             - name: Download artifacts
               uses: actions/download-artifact@v4
               with:
                 name: build-${{matrix.os}}-py-${{matrix.python-version}}
                 path: dist
             
-            # Step 3 Install Project Dependencies
+            # Step 3
             - name: Install Project and dependencies
               run: |
                 python -m pip install --upgrade pip
                 pip install '.[test]'
 
-            # Step 4 Run python tests
+            # Step 4
             - name: Run Python tests
               run: |
                 pytest
