--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,6 +10,9 @@ jobs:
           python-version: ['3.10', '3.11', '3.12']
 
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        working-directory: './src'
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -22,7 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install .
-        
+
     - name: Analyze code with pylint
       run: |
         pylint $(git ls-files '*.py')
