--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-        pip install .
+        pip install ..
 
     - name: Analyze code with pylint
       run: |
