--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [build-system]
-requires = ["setuptools>=42.0", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
-
-[tool.setuptools.packages.find]
-where = ["src"] # Looks for packages in the src/ directory
 
 [project]
 name = "DataDenoise"
@@ -21,4 +18,4 @@ test = [
 ]
 
 [project.scripts]
-datadenoise = "DataDenoise_MAIN:main"
+datadenoise = "data_denoise_main:main"
