--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "DataDenoise"
 version = "0.1.0"
+requires-python = ">=3.11, <=3.14.2"
 dependencies = [
     "numpy >= 1.20.0",
     "scipy >= 1.10.0",
