--- a/.github/workflows/py-build-test.yml
+++ b/.github/workflows/py-build-test.yml
@@ -50,7 +50,7 @@ jobs:
         strategy:
             matrix:
               os: [ubuntu-latest, macos-latest, windows-latest]
-              python-version: ['3.10', '3.11', '3.12']
+              python-version: ['3.14']
         runs-on: ${{matrix.os}}
         steps:
             # Step 1
