--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
         matrix:
           os: [ubuntu-latest, macos-latest, windows-latest]
-          python-version: ['3.10', '3.11', '3.12']
+          python-version: ['3.14']
 
     runs-on: ${{ matrix.os }}
     defaults:
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install project dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,4 +28,4 @@ jobs:
 
     - name: Analyze code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --disable=R0913,R0917,W0143,E1121,R0902 $(git ls-files '*.py')
