--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,11 +1,14 @@
 name: Docker-Build-Push
 
 on:
+    push:
+      branches:
+        - main
     pull_request:
-        branches:
-            - main
-        types:
-            - closed
+      branches:
+        - main
+      types:
+        - closed
 
 jobs:
     push-container:
