--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
     push-container:
-        if: ${{ github.event.pull_request.merged == true }}
+        if: ${{ github.event.pull_request.merged == true || github.event_name == 'push'}}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Repository
