--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,15 +4,10 @@ on:
     push:
       branches:
         - main
-    pull_request:
-      branches:
-        - main
-      types:
-        - closed
+      tags: ['v*.*.*']
 
 jobs:
     push-container:
-        if: ${{ github.event.pull_request.merged == true || github.event_name == 'push'}}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Repository
