--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,6 +24,12 @@ jobs:
               uses: docker/metadata-action@v5
               with:
                 images: ${{ secrets.DOCKER_USERNAME }}/data-denoise
+                tags: |
+                  type=schedule,pattern=nightly
+                  type=ref,event=branch
+                  type=ref,event=pr
+                  type=semver,pattern={{version}}
+                  type=sha,format=short
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
