--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,8 +37,12 @@ jobs:
             - name: Build and push Docker image
               uses: docker/build-push-action@v6
               with:
+                context: .
                 push: true
                 tags: ${{ steps.meta.outputs.tags }}
                 annotations: ${{ steps.meta.outputs.annotations }}
+                labels: ${{ steps.meta.outputs.labels }}
                 provenance: true
                 sbom: true
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
